legend-engine-xts-deephaven/legend-engine-xt-deephaven-pure/src/main/resources/core_deephaven_pure/executionPlan/scratch.txt
Caused by: org.finos.legend.engine.shared.javaCompiler.JavaCompileException: 8 errors compiling /_pure/plan/root/Execute.java
/_pure/plan/root/Execute.java:3: error: package io.deephaven.client.impl does not exist
import io.deephaven.client.impl.BarrageSession;
                               ^
/_pure/plan/root/Execute.java:4: error: package io.deephaven.client.impl does not exist
import io.deephaven.client.impl.TableHandle;
                               ^
/_pure/plan/root/Execute.java:5: error: package io.deephaven.qst.table does not exist
import io.deephaven.qst.table.TableSpec;
                             ^
/_pure/plan/root/Execute.java:6: error: package io.deephaven.qst.table does not exist
import io.deephaven.qst.table.TicketTable;
                             ^
/_pure/plan/root/Execute.java:16: error: package org.finos.legend.engine.plan.execution.stores.deephaven does not exist
import org.finos.legend.engine.plan.execution.stores.deephaven.DeephavenExecutionNode;
                                                              ^
/_pure/plan/root/Execute.java:18: error: cannot find symbol
public class Execute implements DeephavenExecutionNode
                                ^
  symbol: class DeephavenExecutionNode
/_pure/plan/root/Execute.java:20: error: cannot find symbol
    public static TableHandle execute(BarrageSession session)
                                      ^
  symbol:   class BarrageSession
  location: class _pure.plan.root.Execute
/_pure/plan/root/Execute.java:20: error: cannot find symbol
    public static TableHandle execute(BarrageSession session)
                  ^
  symbol:   class TableHandle
  location: class _pure.plan.root.Execute

/_pure/plan/root/Execute.java
0001 package _pure.plan.root;
0002 
0003 import io.deephaven.client.impl.BarrageSession;
0004 import io.deephaven.client.impl.TableHandle;
0005 import io.deephaven.qst.table.TableSpec;
0006 import io.deephaven.qst.table.TicketTable;
0007 import java.math.*;
0008 import java.util.*;
0009 import java.util.function.*;
0010 import java.util.stream.*;
0011 import org.finos.legend.engine.plan.dependencies.domain.date.DayOfWeek;
0012 import org.finos.legend.engine.plan.dependencies.domain.date.DurationUnit;
0013 import org.finos.legend.engine.plan.dependencies.domain.date.PureDate;
0014 import org.finos.legend.engine.plan.dependencies.store.inMemory.IStoreStreamReader;
0015 import org.finos.legend.engine.plan.dependencies.util.Library;
0016 import org.finos.legend.engine.plan.execution.stores.deephaven.DeephavenExecutionNode;
0017 
0018 public class Execute implements DeephavenExecutionNode
0019 {
0020     public static TableHandle execute(BarrageSession session)
0021     {
0022         TableSpec ts = TicketTable.fromQueryScopeField("nds_desktops");
0023         ts.select("Desktop_ID", "City_Name", "Desktop_Name");
0024         return session.session().execute(ts);
0025     }
